syntax = "proto3"
package proto

option go_package = "snake_server/internal/proto/score"

service Score {
	rpc GetScores(ScoreRequest) return (Score) {}
	rpc SetScore(Score) return (ScoreAddResp) {}
}

message ScoreRequest { repeated score}
message Score {
	int32 score
	string user
}
 
message ScoreAddResp {}
